fix: add width and min-height properties for object-fit in safari

--- a/cursus/static/scss/pages/_docs.scss
+++ b/cursus/static/scss/pages/_docs.scss
@@ -75,6 +75,8 @@
       justify-content: center;
 
       & img {
+        width: 100%;
+        min-height: 100%;
         object-fit: cover;
       }
 
